--- a/Valve_Board26.ioc
+++ b/Valve_Board26.ioc
@@ -10,6 +10,10 @@ ADC3.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FDCAN1.CalculateBaudRateNominal=333333
+FDCAN1.CalculateTimeBitNominal=3000
+FDCAN1.CalculateTimeQuantumNominal=1000.0
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=
 I2C2.IPParameters=Timing
@@ -18,21 +22,24 @@ KeepUserPlacement=false
 Mcu.CPN=STM32G491RET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC3
-Mcu.IP1=I2C2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP1=FDCAN1
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32G491R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PB13
 Mcu.Pin1=PA8
 Mcu.Pin2=PA9
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_SYS_VS_DBSignals
-Mcu.Pin5=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_RTOSJjThreadX_6.2.0_2.0.0
-Mcu.Pin6=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_USBJjUSBX_6.2.0_2.0.0
-Mcu.PinsNb=7
+Mcu.Pin3=PA11
+Mcu.Pin4=PA12
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.Pin6=VP_SYS_VS_DBSignals
+Mcu.Pin7=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_RTOSJjThreadX_6.2.0_2.0.0
+Mcu.Pin8=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_USBJjUSBX_6.2.0_2.0.0
+Mcu.PinsNb=9
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -53,6 +60,10 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA11.Mode=FDCAN_Activate
+PA11.Signal=FDCAN1_RX
+PA12.Mode=FDCAN_Activate
+PA12.Signal=FDCAN1_TX
 PA8.Locked=true
 PA8.Mode=I2C
 PA8.Signal=I2C2_SDA
@@ -94,7 +105,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC3_Init-ADC3-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
@@ -136,7 +147,7 @@ RCC.USART2Freq_Value=16000000
 RCC.USART3Freq_Value=16000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
-STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0.IPParameters=USBXCcUSBJjUSBXJjCoreSystem,USBXCcUSBJjUSBXJjUXOoDeviceOoCoreStack,ThreadXCcRTOSJjThreadXJjLowOoPowerOosupport,ThreadXCcRTOSJjThreadXJjPerformanceInfo,ThreadXCcRTOSJjThreadXJjTraceXOosupport,ThreadXCcRTOSJjThreadXJjCore
+STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0.IPParameters=ThreadXCcRTOSJjThreadXJjCore,ThreadXCcRTOSJjThreadXJjPerformanceInfo,ThreadXCcRTOSJjThreadXJjTraceXOosupport,ThreadXCcRTOSJjThreadXJjLowOoPowerOosupport,USBXCcUSBJjUSBXJjCoreSystem,USBXCcUSBJjUSBXJjUXOoDeviceOoCoreStack
 STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0.RTOSJjThreadX_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0.ThreadXCcRTOSJjThreadXJjCore=true
 STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0.ThreadXCcRTOSJjThreadXJjLowOoPowerOosupport=true
