--- a/Valve_Board26.ioc
+++ b/Valve_Board26.ioc
@@ -27,14 +27,17 @@ Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=USB
+Mcu.IPNb=7
 Mcu.Name=STM32G491R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_SYS_VS_DBSignals
-Mcu.Pin11=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_RTOSJjThreadX_6.2.0_2.0.0
-Mcu.Pin12=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_USBJjUSBX_6.2.0_2.0.0
+Mcu.Pin10=PB9
+Mcu.Pin11=VP_SYS_VS_tim6
+Mcu.Pin12=VP_SYS_VS_DBSignals
+Mcu.Pin13=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_RTOSJjThreadX_6.2.0_2.0.0
+Mcu.Pin14=VP_STMicroelectronics.X-CUBE-AZRTOS-G4_VS_USBJjUSBX_6.2.0_2.0.0
 Mcu.Pin2=PF0-OSC_IN
 Mcu.Pin3=PF1-OSC_OUT
 Mcu.Pin4=PB13
@@ -42,8 +45,8 @@ Mcu.Pin5=PA8
 Mcu.Pin6=PA9
 Mcu.Pin7=PA11
 Mcu.Pin8=PA12
-Mcu.Pin9=VP_SYS_VS_tim6
-Mcu.PinsNb=13
+Mcu.Pin9=PB8-BOOT0
+Mcu.PinsNb=15
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-G4.2.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -66,11 +69,12 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA11.Mode=FDCAN_Activate
-PA11.Signal=FDCAN1_RX
-PA12.Mode=FDCAN_Activate
-PA12.Signal=FDCAN1_TX
+PA11.Mode=Device
+PA11.Signal=USB_DM
+PA12.Mode=Device
+PA12.Signal=USB_DP
 PA8.Locked=true
 PA8.Mode=I2C
 PA8.Signal=I2C2_SDA
@@ -80,6 +84,10 @@ PA9.Signal=I2C2_SCL
 PB13.Locked=true
 PB13.Mode=IN5-Single-Ended
 PB13.Signal=ADC3_IN5
+PB8-BOOT0.Mode=FDCAN_Activate
+PB8-BOOT0.Signal=FDCAN1_RX
+PB9.Mode=FDCAN_Activate
+PB9.Signal=FDCAN1_TX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
